board overflow:auto to fix in-note scrolling, abs position footer at bottom

--- a/css/noted.css
+++ b/css/noted.css
@@ -9,12 +9,15 @@
  *
  */
 
+html {
+	height:100%;
+}
 
 body {
 	position:relative;
 	height:100%;
 	margin:0;
-	padding:0 0 35px;
+	padding:0 0 0;
 	font-family:Helvetica,Arial,sans-serif;
 	font-size:12px;
 	line-height:16px;
@@ -281,7 +284,7 @@ ul.body_styles.menu {
 #board {
 	position:relative;
 	margin:0;
-	padding:10px;
+	padding:10px 10px 20px;
 	list-style:none;
 
 	-webkit-perspective: 1000;
@@ -289,14 +292,8 @@ ul.body_styles.menu {
 	
 	-moz-perspective: 1000;
 	-moz-transform-style: flat;
-}
 
-#board:after {
-	content:'.';
-	display:block;
-	clear:both;
-	height:0;
-	visibility:hidden;
+	overflow:auto;
 }
 
 #new_note_ghost {
@@ -453,7 +450,6 @@ ul.body_styles.menu {
 		.note ul.items li.datepicking {
 			background:#000;
 			color:#fff;
-			outline:2px solid #000;
 		}
 		
 		.note ul.items li.overdue {
